# FEVio_ClosedLoopDrivingChallenge

./: README.md
Scripts_Carla/: generate_traffic.py
demo_publisher/: pub.py
demo_subscriber/: sub.py
ecal_carla_bridge/: README.md  pyproject.toml  requirements.txt
ecal_carla_bridge/ecal_carla_bridge/: AckermannDrive_pb2.py  bridge_car.py  bridge_sensor.py  main.py  message_builder.py  transform_publisher.py
ecal_carla_bridge/ecal_carla_bridge/config/: bridge_configurator.py  config_compose.yml
ecal_carla_bridge/ecal_carla_bridge/config/car_configs/: imu.yml  ray_cast_lidar.yml  rgb_cam.yml  sem_seg.yml  test_config.yml
ecal_carla_bridge/ecal_carla_bridge/config/convert_modules/: test_conv_module.py
ecal_carla_bridge/ecal_carla_bridge/configuration/: compose_schema.py  config_schema.py  configurator.py
object_detection/: ImageMarkerArray_pb2.py  README.md  annotate_images.py  requirements.txt
